# claude-python-sdk

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  CLAUDE_SDK_HELP.md  QUICKSTART.md  README.md  SDK_SIGNATURE.md  SESSION_ID_IMPLEMENTATION.md  SESSION_MANAGEMENT.md  animal_haikus.md  claude_sdk_enhanced.py  claude_sdk_help.py  github-actions-workflow.yml  prefix-prompt.md  pyproject.toml  test_session_functionality.py  test_stream_json_parsing.py
.github/workflows/: test.yml
examples/: advanced_features.py  analytics_demo.py  basic_usage.py  full_featured_demo.py  futures_data_example.py  haiku_demo.py  parallel_haikus.py  prefix_prompt_demo.py  response_preview_demo.py  safe_mode.py  session_management.py  session_management_demo.py  session_stories_stream.py  session_stories_test.py  session_title_improvement_test.py  session_workflow_example.py  show_claude_commands.py  stream_json_output.py  stream_json_simple.py  workspace_operations.py
src/claude_sdk/: __init__.py  client.py  exceptions.py  session_client.py
src/claude_sdk/core/: config.py  subprocess_wrapper.py  types.py  workspace.py
src/claude_sdk/utils/: __init__.py  logging.py  retry.py
tests/: conftest.py  test_dangerous_flag.py  test_prefix_prompt.py
tests/e2e/: test_client_workflow.py
tests/integration/: test_real_subprocess.py
tests/unit/: test_client.py  test_subprocess_wrapper.py
